Fix bad alignment of Skip button and error message (vpetrov/survana#6)

--- a/public/css/jquery.mobile.1.3.0-beta.1.css
+++ b/public/css/jquery.mobile.1.3.0-beta.1.css
@@ -127,7 +127,6 @@ label:not([for]) {
 .s-skip {
     position:absolute;
     right:0.2em;
-    top:0.6em;
     z-index:199;
 }
 
@@ -323,6 +322,7 @@ label:not([for]) {
 }
 
 .s-error-button.s-skip {
+    margin-top:0.15em;
     right:0.1em;
 }
 
